--- a/PastaDocsEngRequisitos/Readme
+++ b/PastaDocsEngRequisitos/Readme
@@ -1,1 +1,1 @@
-Guardar somente arquivos que documentam os pedidos do desenvolvimento do projeto, os quais definem o seu ESCOPO;
+Guardar somente arquivos que documentam os pedidos do desenvolvimento do projeto, os quais definem o seu ESCOPO - 
